[gd_scene load_steps=4 format=3 uid="uid://dao3mpcs3vkg5"]

[ext_resource type="Texture2D" uid="uid://c3my41jg7ady6" path="res://sprites/tileset.png" id="1_3inec"]
[ext_resource type="Script" uid="uid://c6pgyurgn6j2t" path="res://scenes/box.gd" id="1_ks2v0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rwgxs"]
size = Vector2(6, 6)

[node name="Box" type="AnimatableBody2D"]
collision_layer = 4
collision_mask = 0
sync_to_physics = false
script = ExtResource("1_ks2v0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3inec")
centered = false
hframes = 5
vframes = 5
frame = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_rwgxs")

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(0, -8)
collision_mask = 6
hit_from_inside = true

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(8, 16)
target_position = Vector2(0, 8)
collision_mask = 6
hit_from_inside = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 8)
target_position = Vector2(-8, 0)
collision_mask = 6
hit_from_inside = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(16, 8)
target_position = Vector2(8, 0)
collision_mask = 6
hit_from_inside = true
